spacing fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -119,7 +119,7 @@ figcaption {
 }
 
 .content-title {
-  font-size: 1.em;
+  font-size: 1.5em;
   margin-bottom: 0.75em;
   text-align: center;
 }
